# comp3015cw1Vampires

./: .gitignore  CMakeLists.txt  README.md  ReportCOMP3016.md
PortraitOfAnVampireVS/: PortraitOfAnVampireVS.sln
PortraitOfAnVampireVS/PortraitOfAnVampireVS/: PortraitOfAnVampireVS.vcxproj  PortraitOfAnVampireVS.vcxproj.filters
PortraitOfAnVampireVS/assets/data/: vampire_traits.json
PortraitOfAnVampireVS/assets/textures/: sourcesAssests
assests/textures/: sourcesAssests
assets/data/: guestList.json  vampire_traits.json
assets_backup/data/: guestList.json
docs/: GITHUB LINK.rtf  YT link.rtf
src/: Buttons.h  Game.h  Guests.h  Path.h  Rounds.h  controls.cpp  game.cpp  guests.cpp  main.cpp  rounds.cpp
